# quantalithos-identity

./: Cargo.toml  README.md
artifacts/test/20260619T033451+0800/: evidence-index.json
artifacts/test/20260619T124900+0800/: evidence-index.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/application/: Cargo.toml
crates/application/src/: command.rs  consumer.rs  errors.rs  facade.rs  jobs.rs  lib.rs  mapper.rs  outbound_material.rs  ports.rs  query.rs  support.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: commands.rs  errors.rs  events.rs  jobs.rs  lib.rs  metadata.rs  protocol.rs  queries.rs  receipts.rs  refs.rs  views.rs
crates/domain/: Cargo.toml
crates/domain/src/: audit.rs  career.rs  errors.rs  handoff.rs  lib.rs  lifecycle.rs  member_identity.rs  memory_reference.rs  outbox.rs  projection_state.rs  reconciliation.rs  reference_state.rs  role_capability.rs  trace.rs
crates/infra/: Cargo.toml
crates/infra/src/: config.rs  in_memory.rs  lib.rs  runtime.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs
migrations/: 0001_bootstrap.sql  0002_core_write_model.sql  0003_outbox_projection_schema.sql  0004_capability_profiles.sql  0005_memory_refs.sql  0006_career_history_entries.sql  0007_pending_tombstone_flows.sql  0008_outbox_dead_status.sql  0009_outbox_trace_id.sql
reports/acceptance/: handoff.md  open-issues.md  risk-acceptance.md  veto-checklist.md
reports/review/: agent-review.md  reviewer-notes.md
reports/runs/20260615T211637+0800/: redaction-check.md
reports/runs/20260616T004732+0800/: redaction-check.md
reports/runs/20260617T032600+0800/: redaction-check.md
reports/runs/20260617T112044+0800/: redaction-check.md
reports/runs/20260618T233256+0800/: dependency-boundary.md
reports/runs/20260619T033451+0800/: dependency-boundary.md  evidence-index.md  gate-summary.md  (+3 more)
scripts/checks/: check_artifact_report_pairing.sh  check_dependency_boundary.sh  check_redaction.sh  dependency_boundary_audit.py  redaction_audit.py  report_audit.py
scripts/gates/: run_ci_gate.sh  run_release_gate.sh
scripts/reports/: build_gate_summary.py  build_gate_summary.sh  generate_acceptance_materials.py  generate_acceptance_materials.sh  generate_evidence_index.py  generate_evidence_index.sh  generate_reports.py  generate_reports.sh  identity_artifact_tools.py  write_commit_02_b_artifacts.py  write_commit_02_c_artifacts.py  write_commit_03_b_artifacts.py  write_commit_03_c_artifacts.py  write_commit_04_b_artifacts.py  write_commit_04_c_artifacts.py  write_commit_05_a_artifacts.py  write_commit_05_c_artifacts.py  write_commit_06_b_artifacts.py  write_commit_08_b_artifacts.py  write_commit_08_b_artifacts.sh  write_commit_08_c_artifacts.py  write_commit_08_c_artifacts.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/application/: capability_profile.rs  career_event.rs  member_lifecycle.rs  memory_refs.rs  mod.rs  p0_smoke.rs  persistence.rs  query_projection.rs  role_catalog_sync.rs  tombstone_flow.rs
src/domain/: audit.rs  capability_profile.rs  career_history.rs  dead_letter.rs  idempotency.rs  member.rs  memory_refs.rs  mod.rs  outbox.rs  projection.rs  role_catalog.rs  timeline.rs  tombstone.rs
src/inbound/: event_consumers.rs  events.rs  http.rs  mod.rs
src/operations/: mod.rs
src/outbound/: mod.rs
src/persistence/: database.rs  mod.rs  pending_tombstone.rs  repositories.rs  test_support.rs  unit_of_work.rs
(+285 files in other folders)
