[package]
name = "quantalithos-identity"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util"] }
