[package]
name = "quantalithos-identity"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "migrate", "time"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["macros", "serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util"] }
