[package]
name = "identity-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "identity_application"
path = "src/lib.rs"

[dependencies]
core-contracts.workspace = true
identity-contracts = { path = "../contracts" }
identity-domain = { path = "../domain" }
serde = { version = "1.0", features = ["derive"] }
