[package]
name = "identity-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "identity_contracts"
path = "src/lib.rs"

[dependencies]
core-contracts.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
