[package]
name = "identity-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "identity_infra"
path = "src/lib.rs"

[dependencies]
core-contracts.workspace = true
identity-application = { path = "../application" }
identity-contracts = { path = "../contracts" }
identity-domain = { path = "../domain" }

[dev-dependencies]
