[package]
name = "identity-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "identity_jobs"
path = "src/lib.rs"

[dependencies]
core-contracts.workspace = true
identity-application = { path = "../application" }
identity-contracts = { path = "../contracts" }

[dev-dependencies]
identity-infra = { path = "../infra" }
